# query_optimizer_alias_bug

./: README.md  database_name.sql  pyproject.toml
query_optimizer_alias/: manage.py
query_optimizer_alias/aliases/: models.py  schema.py
query_optimizer_alias/query_optimizer_alias/: asgi.py  settings.py  urls.py  wsgi.py
