[tool.poetry]
name = "query-optimizer-alias"
version = "0.1.0"
description = ""
authors = ["AIEAJN <47372918+AIEAJN@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "query_optimizer_alias"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.6"
graphene-django = "^3.2.2"
graphene-django-query-optimizer = "^0.8.0"
django-cors-headers = "^3.13.0"
django-filter = "^24.2"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
django-graphql-jwt = "^0.3.4"
gunicorn = "^22.0.0"
whitenoise = "^6.6.0"
django-allow-cidr = "^0.7.1"
uvicorn = "^0.30.1"
graphene-luna = "1.0.0"
pytest-django = "^4.8.0"
pytest = "^8.2.2"
tqdm = "^4.66.4"
rich = "^13.7.1"
django-debug-toolbar = "^4.4.2"
django-graphiql-debug-toolbar = "^0.2.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = {version = "^22.10.0", allow-prereleases = true}
mypy = "^0.991"
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

